--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>
-  {{title}}
-</h1>
+<div class="page-header text-center">
+  <h2>{{title}}</h2>
+</div>
+<app-rectangle-grid></app-rectangle-grid>
+
